--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "setup:supabase": "node scripts/setup-supabase.js",
+    "setup:env": "node scripts/setup-env.js"
   },
   "dependencies": {
     "next": "14.0.0",
