--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "lucide-react": "^0.292.0"
+    "lucide-react": "^0.292.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-helpers-react": "^0.4.2"
   },
   "devDependencies": {
     "@types/node": "20.8.0",
