🤖 Add real OpenAI ChatGPT integration
✨ Features:
- Real GPT-3.5-turbo for smart tagging and summarization
- GPT-4 Vision for image description
- Whisper API for audio transcription
- Task extraction from any text content
- Sentiment analysis
- Fallback processing if API fails

🔑 Add NEXT_PUBLIC_OPENAI_API_KEY to Netlify environment variables

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.292.0",
     "@supabase/supabase-js": "^2.38.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/auth-helpers-react": "^0.4.2"
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "openai": "^4.20.1"
   },
   "devDependencies": {
     "@types/node": "20.8.0",
