--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@supabase/supabase-js": "^2.38.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.4.2",
-    "openai": "^4.20.1"
+    "openai": "^4.20.1",
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
     "@types/node": "20.8.0",
